--- a/VRChat/95/1253795.html
+++ b/VRChat/95/1253795.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "FjsQNq0Os/MPoIgaF8DqCaVte13UCUSsso/ck7GovVI="></script>
+    "iNFM/bGwVE+yWbEuRbMoVuaTnZt37Z/dpDu4JmJznMs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル　スチームパンク風　マスケット銃","description":"商品内容\n・unity package\n・FBX形式モデルデータ\n・テクスチャー１枚\n・利用規約\n・アニメーション（shot）\nバーチャルマーケット2出店、CRY Eng.　の\nメロンソーダと冷麺　@theebjc1　です\n\n\nアバターのあるシーンにprefabをドラッグ＆ドロップし\n追従してほしい場所（スケルトン、アーマチュアなどの手にあたる部分など）に配置\nお好みの大きさ、角度などに調整してからモデルをアップロードしてください\n※オーバーライドアニメーションなどの設定は割愛させていただきます\nご了承ください\n__________________________________________________________________\n※※※利用規約※※※\n※著作権について※\n・当モデルおよび関連データの著作権は製作者の\n　メロンソーダと冷麺 @theebjc1\n　に帰属するものとします\n※禁止行為について※\n・VRChat向けとありますがゲームや撮影などそれ以外のコンテンツでもご自由にお使い\nください（商用、非商用問わず）\n使う際には一報いれて頂けると喜びます！　\n・改変はご自由にどうぞ\n・改変、非改変に関わらず再配布、転売の禁止\n・公序良俗に反する行為、宗教的、政治的利用\n　他者に対する誹謗中傷目的での利用の禁止\n\n※免責事項※\n・モデルデータを利用して発生したいかなる損害、損失、その他不利益などには一切の責任を負いません\nこの利用規約は予告なく変更する場合があります\n＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿＿\nポリゴン数 △4610\n","url":"https://booth.pm/ja/items/1253795","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/a34842f5-5430-4f0c-958c-ae3c9c17a04e/i/1253795/e9e71fa2-e13f-462f-b001-f1f69394d749_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="FjsQNq0Os/MPoIgaF8DqCaVte13UCUSsso/ck7GovVI="></script>
+    nonce="iNFM/bGwVE+yWbEuRbMoVuaTnZt37Z/dpDu4JmJznMs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -405,9 +405,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
