--- a/VRChat/94/1264394.html
+++ b/VRChat/94/1264394.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "LZ6xNdT2IokSkW/XhyI6GbW2MQj1CANuMBXZGuFr17Y="></script>
+    "8RDTl2Mb9s2mfo0F1IQRJFnhUnEgQEx8rW6ErHOHAZU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"木刀","description":"Vケット2開催を記念して作られた非公式な木刀です\nかっこいい焼き印が施してあります\n\nFBX形式\nポリゴン数　△92\npsdテクスチャ同梱\nunitypackage同梱\n\n\n◆◇◆利用規約◆◇◆\n\n改変やVRCでのペデスタル、パブリックアバターへ使用することができます。\nまた、営利非営利を問わず、ゲームや映像作品、動画配信等にご利用いただけます。\n\n\n■禁止事項\n・未改変データの再配布\n・作者と偽る行為\n・特定個人、団体への誹謗中傷を目的とした使用\n・法令に反する使用\n\n■ 免責事項\n・当モデルを使用することで発生した何らかのトラブル、損失に対して、製作者は一切責任を負いません。","url":"https://booth.pm/ja/items/1264394","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/f8d17b37-95cd-4878-8129-85e31c98cf4e/i/1264394/1ed62f26-cd76-40c7-a90f-4c8194beaca9_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LZ6xNdT2IokSkW/XhyI6GbW2MQj1CANuMBXZGuFr17Y="></script>
+    nonce="8RDTl2Mb9s2mfo0F1IQRJFnhUnEgQEx8rW6ErHOHAZU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -353,9 +353,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
