--- a/VRChat/59/1264359.html
+++ b/VRChat/59/1264359.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "+4TMKMyZUtSrBtJKyDoLTcoDIja4zAOoFMCUSXmbdYU="></script>
+    "kzuvxzkYlbp+z6iV0DwITFGlMqxS45LmsMWXBys2LCw="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【メンテ中】  VRC用 オリジナル3Dモデル  黒猫「くろね」 （VRchat, unity用） 素体入り","description":"【改修中】\n\nこちらの商品はvket2開催当時にモデリングしたもので、\n今見ると不備というか直したい場所がいっぱいあります\nSDK2.0。\n\n現在修正中です。修正完了後アップデートいたします\n\n-----------------------\n\n\nVRChatやunityで使用できる、humanoid形式のモデルです。\n\n========\n\n【同梱内容】\n\n◆unity package\n・vrc用にポリゴンを削減したfbx、マテリアル、テクスチャ\n┗リップシンク設定済み\n┗ダイナミックボーンの設定済み\n┗表情＆手のポーズのanimationファイル\n┗sceneデータ（kurone_vrc.unity）\n\n\n◆改造用の素体モデルのfbx\n┗ピンク髪、紫瞳の色違いテクスチャつき\n\n-----\n\n【インポートいただく前に】\n・ダイナミックボーン\n・VRC sdk　※必須\n・cubedシェーダー　※必須\n\nをアセットにあらかじめご用意いただくと　スムーズにVRChatに連れて行けるかと思います。\n\n\n※ご注意※\n上記のダイナミックボーンなどのアセット自体は販売データに含みません\n\n\n【unityにインポートしたあと】\n\nasset内にインポートされた　unityのロゴマークの\n「kurone_vrc.unity」を開いていただくと\n各種コンポーネント設定済みのデータが開きますので、\nそのままvrchatにアップロードいただけるかとおもいます。\n\n\n【補足】\n\nunitypackage内のアバターデータ(fbx)は△ポリゴン4万ちょっとです。\n素体のほうは　靴や靴下、体部分もすべてメッシュがあるため5万ポリゴン近くになっています。\n\n中世的・性別不明な子というコンセプトで作りまして\nお好きな性別にしていただいて大丈夫です。\n\n------\n\n【OKな利用】\n\n購入いただいた本人が使用される場合、広くご利用いただけます。\n\n・VRCでの利用、その他VRゲームでの利用\n\n・VRM、MMDなどにへの変換、その他別形式への変換\n\n・動画への使用\n\n・アプリへの使用\n\n・モデルデータやテクスチャの改造\n\n・素体を利用し、別のキャラクターなどを作ること（ただし改造したものでも　再配布は禁止となります）\n\n・年齢制限やモザイク処理など　適切な措置を施したうえでのR18利用\n\n------\n\n【禁止事項】\n\n改造の有無にかかわらず以下を禁止とさせていただきます。\n\n・モデルデータの再配布\n\n・モデルの再販売\n\n・モデルデータの第三者への譲渡\n\n※改造していてもしてなくても　第三者がデータを受け取れる状態にされませんようお願い申し上げます。\n\n（譲渡するつもりがなくても　他者がモデルを利用できる環境にデータをアップロードされませんようお願いします。）\n\n※ちなみにですが　当モデルの作者は例外として　デバッグの依頼や企画などで　モデルデータを他者に提供することがございます。\n\n------\n\n\n【その他】\n本モデルは　素人が趣味で制作しております。\n多少の不備や破綻など、あるかもしれません。\n\nダンスワールドなどで正常に踊れており\nviveでのVR使用もできておりました。\n（フルトラは未検証です）\n\n今後もアップデートでクオリティアップや　おまけの同梱をしていければと思います。\n\nご要望や不具合報告は大歓迎ですが　知識不足ですぐに直せない場合もございます。\n上記ご了承の上お求めくださいませ。\n\nよろしくお願いします。\n\n◆連絡先\ntwitter: \nhttps://twitter.com/kantenneko\n\nましゅまろ:\nhttps://marshmallow-qa.com/kantenneko?utm_medium=url_text\u0026utm_source=promotion\n\nmail:\nkantenneko@gmail.com\n\n\nその他、不足事項や規約として追記が必要なもの、\nアップデート情報など\n当ページに追記してまいります。\n\n\n寒天ねこ\n\n========\n◆up date◆\n\n2019/3/7　リリース\nバーチャルマーケット2　モクリバザールB、B階段市場06 出展\n\n2019/3/16 ver.1.1にアップデート\n・顔の法線を変更、影の入り方をアニメチックなフラット寄りにしました。\n・表情がシェイプキーのみでしたが　animetionファイルにし、アバターアップロード時に元から表情や手のポーズが使えるようにしました。\n・一部メッシュの頂点を編集\n・.unityのシーンデータ同梱\n","url":"https://booth.pm/ja/items/1264359","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/1f267d2d-50f4-463a-8427-4ba381d766d5/i/1264359/f484ad21-1981-4525-ae75-55ae7cc915b4_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+4TMKMyZUtSrBtJKyDoLTcoDIja4zAOoFMCUSXmbdYU="></script>
+    nonce="kzuvxzkYlbp+z6iV0DwITFGlMqxS45LmsMWXBys2LCw="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -505,9 +505,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
