--- a/VRChat/21/1264321.html
+++ b/VRChat/21/1264321.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "zf3i995NHNfEvT5wKQ5Qtlnngchbx3Y9sk4G+b315+Q="></script>
+    "U4Ov9+La6KJPJCaSd/qPaVVVIt5A/5UQNTvSDTbHV/s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"HallClock","description":"ホールクロックの3Dモデルです。\n時計内部の構造は忠実ではありません。\n針は本体と独立したオブジェクトになっており、回転が可能です。\nポリゴン数：53298\n\n※時計としての機能を持ったスクリプト/シェーダー等は付属しておりませんのでご注意ください\n\n内容は予告なしにアップデートされる場合があります。ご了承ください。\n\nバーチャルマーケット2 / バーチャルミュージアムC / C-M04\nサークル名：Oil Sardine\nにて展示しております！","url":"https://booth.pm/ja/items/1264321","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/49cd1486-e101-4486-8433-c1feecce9abe/i/1264321/0d075c69-4855-4ee7-b6b5-202871dc92fc_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zf3i995NHNfEvT5wKQ5Qtlnngchbx3Y9sk4G+b315+Q="></script>
+    nonce="U4Ov9+La6KJPJCaSd/qPaVVVIt5A/5UQNTvSDTbHV/s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -479,9 +479,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
