--- a/VRChat/36/1229736.html
+++ b/VRChat/36/1229736.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "A0hfUFCnyz5yJvMa/ojm1jbAzk3b0QJ4yAgyaNy9G58="></script>
+    "ttUVxRV/N4oVeY/B+8oAQbSOSse/VucxrCMDh9loChE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"SSC_Gm03: アズール・パースート / アズール・ソーティ","description":"Solid State Conception - 電脳ガーメント03\n「アズール・パースート」/「アズール・ソーティ」\n\n警備組織をイメージしたミリタリーライクな衣装です。\n男性用「パースート」と、女性用「ソーティ」のセット。\nボーン、ウェイト設定済み。手、足付属。アバターの頭部モデルがあれば、すぐに導入可能です。\n\n※アバターは付属しません。\n\n・DynamicBone設定済み。同名のアセットをお持ちの場合、装飾が揺れます。\n・Clothコンポーネント設定済み。「アズール・ソーティ」のスカートが揺れ、足との干渉を（ある程度）防ぎます。","url":"https://booth.pm/ja/items/1229736","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1800"},"image":"https://booth.pximg.net/c/620x620/c0a72cc4-55c2-42d7-8acf-052eee064242/i/1229736/4ca54322-190f-466c-839a-950f0c6a97ad_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="A0hfUFCnyz5yJvMa/ojm1jbAzk3b0QJ4yAgyaNy9G58="></script>
+    nonce="ttUVxRV/N4oVeY/B+8oAQbSOSse/VucxrCMDh9loChE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -431,9 +431,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
